# vdt-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init_db.py  init_fixtures.py  pyproject.toml
.github/workflows/: apiserver.yml
apiserver/apiserver/: settings.py  urls.py
apiserver/fixtures/: mock_members.json
apiserver/members/: models.py  serializers.py  tests.py  urls.py  views.py
apiserver/members/migrations/: 0001_initial.py  0002_alter_member_options.py
data/: load_data.sql  load_mock_data.sql  mock_data.csv
deployment/: Dockerfile  api-variables.env  db-variables.env  entrypoint.sh  nginx.conf
