[tool.poetry]
name = "api"
version = "1.0"
description = "API CRUD server written with DRF"
authors = ["Bach Pham <91104936+jspbach@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.*"
djangorestframework = "3.15.*"
psycopg = "3.*"
gunicorn = "*"
django-cors-headers = "*"
markdown = "*"
Pygments = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
